--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="20dp"
     tools:context=".MainActivity">
 
 
@@ -18,14 +18,17 @@
         android:src="@drawable/lolis"/>
 
     <EditText
+
         android:layout_width="match_parent"
         android:inputType="text"
+        android:id="@+id/edUser"
         android:imeOptions="actionNext"
         android:layout_height="wrap_content"
         android:hint="Usuario"
         />
 
     <EditText
+        android:id="@+id/edPassword"
         android:inputType="textPassword"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
@@ -35,7 +38,7 @@
     
     
     <Button
-
+        android:onClick="Login"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
